--- a/tailwind.css
+++ b/tailwind.css
@@ -1,3 +1,20 @@
+/* tailwind.css */
+
+/*!
+ * Theme Name: Siphome theme
+ * Description: Theme with tailwindcss and timber
+ * Author: Axiel Roque
+*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .card {
+    background-color: theme(colors.white);
+    border-radius: theme(borderRadius.lg);
+    padding: theme(spacing.6);
+    box-shadow: theme(boxShadow.xl);
+  }
+}
