--- a/views/tease.twig
+++ b/views/tease.twig
@@ -1,9 +1,33 @@
-<article class="tease tease-{{post.post_type}}" id="tease-{{post.ID}}">
+{# <article class="tease tease-{{post.post_type}}" id="tease-{{post.ID}}">
 	{% block content %}
-		<h2 class="h2"><a href="{{post.link}}">{{post.title}}</a></h2>
+		<h2 class="h2">
+			<a href="{{post.link}}">{{post.title}}</a>
+		</h2>
 		<p>{{post.preview}}</p>
 		{% if post.get_thumbnail %}
-			<img src="{{post.thumbnail.src}}" />
+			<img src="{{post.thumbnail.src}}"/>
 		{% endif %}
+	{% endblock %}
+</article> #}
+
+<article id="tease-{{post.ID}}" class="tease-{{post.post_type}} mx-2 my-3 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+	{% block content %}
+		{% if post.get_thumbnail %}
+			<a href="{{post.link}}">
+				<img class="rounded-t-lg" src="{{post.thumbnail.src | resize(400,200)}}" alt=""/>
+			</a>
+		{% endif %}
+		<div class="p-5">
+			<a href="{{post.link}}">
+				<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{post.title}}</h5>
+			</a>
+			<p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{post.preview}}</p>
+			<a href="{{post.link}}" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+				Read more
+				<svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+				</svg>
+			</a>
+		</div>
 	{% endblock %}
 </article>
