--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -16,7 +16,7 @@
 		<link rel="profile" href="http://gmpg.org/xfn/11">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Padauk:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 		{{function('wp_head')}}
 	</head>
